--- a/index.css
+++ b/index.css
@@ -32,14 +32,14 @@ body{
 }
 
 #left img {
-	width: 60%;
+	width: 52%;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 #right img {
-	width: 60%;
+	width: 52%;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -51,33 +51,25 @@ h2{
 	margin-right: auto;
 	font-size: 20em;
 	text-align: center; 
+	line-height: 1.1;
 }
 
 #replayDiv{
-	top: 82%;
+	top: 90%;
 	width: 100%;
 	position: absolute;
 }
 
-#replayCircle{
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 22%;
-}
 
-h3{
-	font-size: 3em;
-	position: absolute;
-	top: 80px;
-	width: 100%;
-	text-align: center;
-	color: white;
-}
 
 h1{
 	font-size: 11em;
 	text-align: center;
 	font-weight: 100;
-	padding-bottom: 9%;
+	padding-bottom: 4%;
+}
+
+h3{
+	font-size: 3em;
+	color: black;
 }
